Fixed bug on return flags from tape load trap. It only affected Rocman game and enabling "any flag loading" setting
Fixed setting a configured memory breakpoint like this "--set-mem-breakpoint 0000H 2" which was fired on startup

Fixed menu issues:
-fixed generic message splash: wait until key is released (if any pressed)
-fixed opening the menu on stdout driver on the first start of ZEsarUX

Fixed tbblue emulation:
-fixed clipping in 80x32 mode
-fixed error when paging rom in ram, on case pages 0,1,2,3
-fixed "bit 7 = Disable ULA output (soft reset = 0)" on register 0x68
-fixed turbosound and dac activation when tbblue fast boot mode
-added turbo mode x8 (28 MHz)
-fixed reading register 7
-fixed RTC emulation
-fixed autoload tape

Fixed Accessibility bugs: 
-now menu settings (anything between square brackets []) are played at the end of the menu line
-now menu settings ([ ] and [X]) are played as "enabled"/"disabled"


Some other minor bugfixes and improvements



Version 8.0. 19 July 2019 - World Destruction edition

Improved menu interface:
-Program Window can be extended horizontally and have a right region to place menu zxvision windows (called ZX Desktop)
-Draw engine: now it allows transparency
-Menu windows can be placed and resized to the whole program window
-Some windows geometry (position, size) are saved in the configuration
-Hotkeys now show right capitalization (lowercase or uppercase)
-Edit box now has a key to delete all input (cursor down)
-Edit box can now move cursor left and right and write text in the middle
-Enabling kempston mouse no longer disables mouse on menu
-GUI color bars depend on current style
-Added support for more cyrillic characters on menu
-Added RetroMac Gui Style
-Improved memory zone selector
-Improved footer:
--Footer now completely follows GUI Style
--Reordered cpu use, numbers in red when cpu use > 85%
--Now shows cpu temperature on Linux (and not only on Raspbian as before)
