@@ -1,2 +1,2 @@
-- tests.sna no parece cambiar interrupciones modo
-- z88 no borra menu cuando real video no activo
+
+-z88 debug bloque memoria no se ven enteros
